Fix chat box alignment

--- a/css/global.css
+++ b/css/global.css
@@ -116,20 +116,25 @@ nav ul li {
 
 #chatEntry {
     clear: both;
+    box-sizing: border-box;
 }
 
-#chatEntry textarea {
+#chatForm {
+    width: 100%;
+    height: 100px;
+    margin: 0;
+}
+
+#chatForm textarea {
     font-family: inherit;
     font-size: inherit;
     background: transparent;
     color: #fff;
     width: 100%;
+    height: 100%;
     resize: none;
     border: none;
     outline: none;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 .chatName {
